--- a/tidy_2_invitro_ph.Rmd
+++ b/tidy_2_invitro_ph.Rmd
@@ -40,15 +40,14 @@ fusa_tidy_2 =
         ph = recode(ph, `Control (1)` = "control", `Control (2)` = "control_2"),
         day = str_extract(day, r"(\d+)")
     ) %>%
-    add_column(trial = 2, species = "fusarium_oxysporum") %>%
-    select(start_date,
-           trial,
-           species,
-           ph,
-           replicate,
-           day,
-           dimension,
-           length_cm)
+    add_column(trial = 2,
+               species = "fusarium_oxysporum") %>%
+    pivot_wider(
+        id_cols = c(start_date, trial, species, ph, replicate, day, comment),
+        names_from = dimension,
+        values_from = length_cm,
+        names_sort = TRUE
+    )
 ```
 
 ```{r}
@@ -68,15 +67,14 @@ pyth_tidy_2 =
         ph = recode(ph, `Control (1)` = "control", `Control (2)` = "control_2"),
         day = str_extract(day, r"(\d+)")
     ) %>%
-    add_column(trial = 2, species = "pythium_irregulare") %>%
-    select(start_date,
-           trial,
-           species,
-           ph,
-           replicate,
-           day,
-           dimension,
-           length_cm)
+    add_column(trial = 2,
+               species = "pythium_irregulare") %>%
+    pivot_wider(
+        id_cols = c(start_date, trial, species, ph, replicate, day, comment),
+        names_from = dimension,
+        values_from = length_cm,
+        names_sort = TRUE
+    )
 ```
 
 ```{r}
@@ -107,17 +105,12 @@ for (cells in pyth_cells_3) {
         ph = tolower(str_extract(ph, r"(\d+|Control)"))
     ) %>%
     add_column(trial = 3, start_date = NA) %>%
-    select(start_date, 
-           trial,
-           species,
-           ph,
-           replicate,
-           day,
-           dimension,
-           length_cm,
-           comment
-           )
-    
+    pivot_wider(
+        id_cols = c(start_date, trial, species, ph, replicate, day, comment),
+        names_from = dimension,
+        values_from = length_cm,
+        names_sort = TRUE
+    )
     pyth_tidy_3 = append(pyth_tidy_3, list(tidy))
 }
 
